# GpuRayCraft

./: .gitignore  CMakeLists.txt
lib/lodepng/: lodepng.cpp
res/: draw.frag  raytracer.glsl
src/: Loader.cpp  Loader.h  Shader.cpp  Shader.h  main.cpp
